<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.eyelog.alarmclock.MainActivity"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@color/grey_light">

    <TextView
        android:text="@string/alarms_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/id_tv_main_title"
        android:elevation="3sp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:layout_marginTop="5dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_tv_main_title"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button3"
        android:id="@+id/id_alarms_list"
        android:scrollbars="none"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/no_alarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_main_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/id_tv_no_alarms"
        android:elevation="3sp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:elevation="3sp"
        android:gravity="center"
        android:onClick="onNew"
        android:padding="5dp"
        android:text="@string/new_alarm"
        android:textColor="@color/grey"
        android:textSize="18sp" />

</RelativeLayout>
